--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body {
 
 /* =====================COMPONENTS============================ */
 .logo{
+	margin-right: 76px;
 font-family: var(--secondary-font);
 font-weight: 800;
 font-size: 18px;
@@ -80,6 +81,7 @@ padding-right: 15px;
 	border-bottom: 1px solid #E7E9FC;
 }
 .page-header-conteiner{
+	width: 1158px;
 	display: flex;
 	align-items: center;
 }
@@ -87,7 +89,7 @@ padding-right: 15px;
 .page-nav{
 	display: flex;
 	align-items: center;
-	column-gap: 76px;
+	/* column-gap: 76px; */
 }
 
 .address-list{
@@ -153,12 +155,14 @@ color: var(--secondary-text-color-teme-light);
 .hero {
 	background-color: var(--dark-color-backgraund);
 	/* height: 600px; */
+	padding-top: 188px;
+	padding-bottom: 188px;
 }
 
 .hero-conteiner{
-	height: 600px;
-	padding-top: 188px;
-	padding-bottom: 188px;
+	/* height: 600px; */
+	/* padding-top: 188px;
+	padding-bottom: 188px; */
 }
 .main-title{
 display: block;
@@ -187,6 +191,7 @@ color: var(--primary-text-color-teme-dark);
 	margin-left: auto;
 	margin-right: auto;
 	min-width: 169px;
+	height: 56px;
 	font-family: var(--primary-font);
 	font-weight: 500;
 	font-size: 16px;
@@ -196,11 +201,21 @@ color: var(--primary-text-color-teme-dark);
 	background-color: var(--accent-color);
 	border-radius: 4px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border: none;
 }
 
 /* ================================ABOUT======================== */
+.about-section{
+	padding-top: 120px;
+	padding-bottom: 120px;
+
+}
+.menu-discription-about{
+	flex-basis: calc((100%-72)/4);
+}
 
 .priority-about{
+margin-bottom: 8px;
 font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
@@ -219,12 +234,14 @@ color: var(--secondary-text-color-teme-light);
 }
 .list-about{
 	display: flex;
-	column-gap: 24px;
-	padding-top: 120px;
-	padding-bottom: 120px;
+	gap: 24px;
+	/* padding-top: 120px;
+	padding-bottom: 120px; */
 }
 /* ==============================================WORK========================= */
-
+.section-work{
+	padding-bottom: 120px;
+}
 .subtitle-work{
 font-weight: 700;
 font-size: 36px;
@@ -237,20 +254,24 @@ margin-bottom: 72px;
 }
 .menu-work-list{
 	display: flex;
-	column-gap: 24px;
-	flex-basis: calc((100%-48)/3);
-	padding-bottom: 120px;
+	gap: 24px;
+	
 }
-
+.galary-work-list{
+	flex-basis: calc((100%-48)/3);
+}
 /* ==============================================WORK========================= */
 
 /* ==============================================OURTEAM========================== */
-.ourteam{
+.ourteam-section{
 	background-color: var(--secondary-color-bacground);
+	padding-top: 120px;
+	padding-bottom: 120px;
 }
 .galary-ourteam{
 background-color: var(--third-color-background);
 flex-basis: calc((100%-72px)/4);
+border-radius: 0px 0px 4px 4px;
 }
 .subtitle-ourteam{
 	font-family: 'Roboto';
@@ -265,13 +286,16 @@ text-transform: capitalize;
 
 color: #2E2F42;
 margin-bottom: 72px;
-padding-top: 120px;
 }
-.emploer{
+.emploer-conteiner{
 	padding-top: 32px;
 	padding-left: 16px;
-	padding-right: 16px;
-	margin-bottom: 8px;
+	padding-right: 32px;
+	padding-bottom: 32px;
+}
+.emploer{
+text-align: center;
+margin-bottom: 8px;
 font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
@@ -280,9 +304,7 @@ letter-spacing: 0.02em;
 color: var(--primary-text-color-teme-light);
 }
 .position-emploer{
-	padding-bottom: 32px;
-	padding-left: 16px;
-	padding-right: 16px;
+text-align: center;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
@@ -292,7 +314,6 @@ color: var(--secondary-text-color-teme-light);
 .menu-ourteam{
 	display: flex;
 	column-gap: 24px;
-	padding-bottom: 120px;
 }
 /* ==============================================OURTEAM========================== */
 
@@ -306,8 +327,13 @@ color: var(--secondary-text-color-teme-light);
 .galary-menu :active{
 color: var(--primary-text-color-teme-dark);
 background-color: var(--menu-link-color);
+border: 1px solid #E7E9FC;
 }
 .galary-button{
+padding-top: 12px;
+padding-left: 24px;
+padding-right: 24px;
+padding-bottom: 12px;
 font-family: var(--primary-font);
 font-weight: 500;
 font-size: 16px;
@@ -315,7 +341,8 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 /* cursor: pointer; */
 
-border: 1px solid #E7E9FC;
+/* border: 1px solid #E7E9FC; */
+border: 1px solid transparent;
 border-radius: 4px;
 
 color: var(--accent-color);
@@ -324,11 +351,15 @@ background-color: var(--secondary-color-bacground);
 .button-list{
 	display: flex;
 	justify-content:center ;
-	column-gap: 24px;
-	padding-top: 96px;
-
+	gap: 24px;
+	margin-bottom: 72px;
 }
 /* ===================================MENU  BUTTON=============================== */
+.galary{
+	padding-top: 96px;
+	padding-bottom: 120px;
+}
+
 .hidden-header{
 	position: absolute;
 	width: 1px;
@@ -347,13 +378,11 @@ background-color: var(--secondary-color-bacground);
 
 	flex-wrap: wrap;
    row-gap: 48px;
-	/* column-gap: 24px; */
-	padding-top: 72px;
-	padding-bottom: 120px;
 }
 .servis-group{
-	flex-basis: calc((100%-48px)/3);
+	width: calc((100%-48px)/3);
 	width: 360px;
+	column-gap: 24px;
 }
 
 .servis-group-discription{
@@ -373,9 +402,7 @@ letter-spacing: 0.02em;
 color: var(--secondary-text-color-teme-light);
 }
 .servise-group-conteiner{
-	padding-top: 32px;
-	padding-left: 16px;
-	padding-bottom: 32px;
+	padding: 32px 16px;
 	width: 360px;
 	border: 1px solid #E7E9FC;
 	border-top: none;
@@ -397,6 +424,8 @@ color: var(--secondary-text-color-teme-dark);
 
 .footer-title{
 	background-color: var(--dark-color-backgraund);
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
 .fotter-discription{
@@ -414,11 +443,6 @@ color: var(--secondary-text-color-teme-dark);
 }
 .footer-link{
 	margin-bottom: 16px;
+	display: inline-block;
 }
-.footer-section{
-	padding-top: 100px;
-	padding-bottom: 100px;
-
-}
-
 
