--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ color: var(--accent-color);
 
 
 }
-.conteiner{
+.container{
 width: 1158px;
 margin-left: auto;
 margin-right: auto;
@@ -95,13 +95,13 @@ padding-right: 15px;
 .address-list{
 	display: flex;
 	align-items: center;
-	column-gap: 40px;
+	gap: 40px;
 }
 
 .menu-item-list{
 	display:flex;
 	align-items: center; 
-	column-gap: 40px;
+	gap: 40px;
 }
 
 .header-logo{
@@ -115,6 +115,8 @@ color: var(--primary-text-color-teme-light);
 
 }
 .menu-link{
+padding-top: 24px;
+padding-bottom: 24px;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -288,10 +290,7 @@ color: #2E2F42;
 margin-bottom: 72px;
 }
 .emploer-conteiner{
-	padding-top: 32px;
-	padding-left: 16px;
-	padding-right: 32px;
-	padding-bottom: 32px;
+	padding: 32px 16px;
 }
 .emploer{
 text-align: center;
@@ -313,7 +312,7 @@ color: var(--secondary-text-color-teme-light);
 }
 .menu-ourteam{
 	display: flex;
-	column-gap: 24px;
+	gap: 24px;
 }
 /* ==============================================OURTEAM========================== */
 
@@ -341,8 +340,8 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 /* cursor: pointer; */
 
-/* border: 1px solid #E7E9FC; */
-border: 1px solid transparent;
+border: 1px solid #E7E9FC;
+/* border: 1px solid transparent; */
 border-radius: 4px;
 
 color: var(--accent-color);
@@ -378,11 +377,12 @@ background-color: var(--secondary-color-bacground);
 
 	flex-wrap: wrap;
    row-gap: 48px;
+	column-gap: 24px;
 }
 .servis-group{
 	width: calc((100%-48px)/3);
 	width: 360px;
-	column-gap: 24px;
+	/* column-gap: 24px; */
 }
 
 .servis-group-discription{
