goit-markup-hw-03

--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,11 @@ color: var(--secondary-text-color-teme-light);
 .galary-menu :active{
 color: var(--primary-text-color-teme-dark);
 background-color: var(--menu-link-color);
-border: 1px solid #E7E9FC;
+
+}
+.galary-button :hover,
+.galary-button :focus{
+	border: 1px solid #E7E9FC;
 }
 .galary-button{
 padding-top: 12px;
