--- a/css/style.css
+++ b/css/style.css
@@ -316,18 +316,15 @@ color: var(--secondary-text-color-teme-light);
 /* ===================================MENU  BUTTON=============================== */
 
 
-.galary-menu :hover,
+/* .galary-menu :hover,
 .galary-menu :focus,
 .galary-menu :active{
 color: var(--primary-text-color-teme-dark);
 background-color: var(--menu-link-color);
 
-}
-.galary-button :hover,
-.galary-button :focus{
-	border: 1px solid transparent;
-}
-.galary-button{
+} */
+
+.galary-button {
 padding-top: 12px;
 padding-left: 24px;
 padding-right: 24px;
@@ -346,6 +343,13 @@ border-radius: 4px;
 color: var(--accent-color);
 background-color: var(--secondary-color-bacground);
 }
+.galary-menu :hover,
+.galary-menu :focus {
+color: var(--primary-text-color-teme-dark);
+background-color: var(--menu-link-color);
+border: 1px solid transparent;
+}
+
 .button-list{
 	display: flex;
 	justify-content:center ;
